--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ add_test(runtests runtests)
 install(TARGETS spectator_cpp DESTINATION lib)
 install(DIRECTORY spectator DESTINATION include FILES_MATCHING PATTERN "*.h")
 install(DIRECTORY 3rd-party/ska DESTINATION include FILES_MATCHING PATTERN "*.hpp")
+install(DIRECTORY 3rd-party/rapidjson DESTINATION include FILES_MATCHING PATTERN "*.h")
 
 if(CMAKE_SYSTEM_NAME STREQUAL Linux)
   install(TARGETS spectatorStatic DESTINATION lib)
